--- a/main.bib
+++ b/main.bib
@@ -758,3 +758,78 @@
   organization={IEEE},
   doi={10.1109/ICDMW.2014.55}
 }
+
+@article{ruhe2005art,
+  title={{The Art and Science of Software Release Planning}},
+  author={Ruhe, G{\"u}nther and Saliu, Moshood Omolade},
+  journal={{IEEE Software}},
+  volume={22},
+  number={6},
+  pages={47--53},
+  year={2005},
+  publisher={IEEE},
+  doi={10.1109/MS.2005.164}
+}
+
+@article{van1997software,
+  title={{Software Release Management}},
+  author={Van Der Hoek, Andre and Hall, Richard S. and Heimbigner, Dennis and Wolf, Alexander L.},
+  journal={{ACM SIGSOFT Software Engineering Notes}},
+  volume={22},
+  number={6},
+  pages={159--175},
+  year={1997},
+  publisher={ACM},
+  doi={10.1145/267896.267909}
+}
+
+@book{humble2010continuous,
+  author = {Humble, Jez and Farley, David},
+  doi = {10.5555/1869904},
+  publisher = {Pearson Education},
+  title = {{Continuous Delivery: Reliable Software Releases Through Build, Test, and Deployment Automation}},
+  year = {2010},
+}
+
+@article{okumoto1979optimum,
+  title={{Optimum Release Time for Software Systems Based on Reliability and Cost Criteria}},
+  author={Okumoto, Kazu and Goel, Amrit L.},
+  journal={{Journal of Systems and Software}},
+  volume={1},
+  pages={315--318},
+  year={1979},
+  publisher={Elsevier},
+  doi={10.1016/0164-1212(79)90033-5}
+}
+
+@article{yamada1985cost,
+  title={{Cost-Reliability Optimal Release Policies for Software Systems}},
+  author={Yamada, Shigeru and Osaki, Shunji},
+  journal={{IEEE Transactions on Reliability}},
+  volume={34},
+  number={5},
+  pages={422--424},
+  year={1985},
+  publisher={IEEE},
+  doi={10.1109/TR.1985.5222222}
+}
+
+@inproceedings{khomh2012faster,
+  title={{Do Faster Releases Improve Software Quality? An Empirical Case Study of Mozilla Firefox}},
+  author={Khomh, Foutse and Dhaliwal, Tejinder and Zou, Ying and Adams, Bram},
+  booktitle={{Proceedings of the 9th Working Conference on Mining Software Repositories (MSR)}},
+  pages={179--188},
+  year={2012},
+  organization={IEEE},
+  doi={10.1109/MSR.2012.6224279}
+}
+
+@inproceedings{basili1996understanding,
+  title={{Understanding and Predicting the Process of Software Maintenance Releases}},
+  author={Basili, Victor and Briand, Lionel and Condon, Steven and Kim, Yong-Mi and Melo, Walc{\'e}lio L. and Valen, Jon D.},
+  booktitle={{Proceedings of 18th International Conference on Software Engineering}},
+  pages={464--474},
+  year={1996},
+  organization={IEEE},
+  doi={10.1109/ICSE.1996.493441}
+}
