--- a/07-releasing/07-releasing.tex
+++ b/07-releasing/07-releasing.tex
@@ -73,7 +73,8 @@
 \qte
   [\nospell{Victor Basili}]
   {victor-basili}
-  {If improving productivity is the main concern, then it may be wise to try to \ul{avoid} scheduling \ul{small} error correction releases. Instead the manager should try, when possible, to \ul{package} small error corrections in a release with larger enhancements.}
+  {If improving productivity is the main concern, then it may be wise to try to \ul{avoid} scheduling \ul{small} error correction releases. Instead the manager should try, when possible, to \ul{package} small error corrections in a release with larger enhancements.
+  \pptPin{\raggedleft\colorbox{red}{\color{white}Respectfully} \\ \colorbox{red}{\color{white}disagree!}\par}}
   {basili1996understanding}
 
 \qte
@@ -90,5 +91,11 @@
 \thought{Be aware of malware.}
 
 \thought{Announce them.}
+
+\qte
+  [\nospell{Jianyu Wu}]
+  {jianyu-wu}
+  {We find that: 1) RN producers are more likely to miss information than to include incorrect information, especially for breaking changes; 2) improper layout may bury important information and confuse users; 3) many users find RNs inaccessible due to link deterioration, lack of notification, and obfuscate RN locations; 4) automating and regulating RN production remains challenging despite the great needs of RN producers.}
+  {wu2022demystifying}
 
 \end{document}
