--- a/main.bib
+++ b/main.bib
@@ -833,3 +833,12 @@
   organization={IEEE},
   doi={10.1109/ICSE.1996.493441}
 }
+
+@inproceedings{wu2022demystifying,
+  title={{Demystifying Software Release Note Issues on GitHub}},
+  author={Wu, Jianyu and He, Hao and Xiao, Wenxin and Gao, Kai and Zhou, Minghui},
+  booktitle={{Proceedings of the 30th International Conference on Program Comprehension}},
+  pages={602--613},
+  year={2022},
+  doi={10.1145/3524610.3527919}
+}
