--- a/03-making-changes/03-making-changes.tex
+++ b/03-making-changes/03-making-changes.tex
@@ -33,7 +33,13 @@
   {We found that \ul{33\%} of the patches makes it into a Linux release, and that most of them need \ul{3 to 6 months} for this.}
   {jiang2013will}
 
-\thought[bugayenko2020blog0729]{Make small pull requests}
+\thought[bugayenko2020blog0729]{Make small pull requests.}
+
+\qte
+  [\nospell{Dabbish Laura}]
+  {dabbish-laura}
+  {Pull requests with many comments were much less likely to be accepted, moderated by the submitter's prior interaction in the project.}
+  {tsay2014influence}
 
 \qte
   [\nospell{Yue Yu}]
@@ -53,7 +59,7 @@
   {A correlation between \ul{change size} and \ul{review quality} is acknowledged by Google and developers are strongly encouraged to make small, incremental changes (with the exception of large deletions and automated refactoring).}
   {sadowski2018modern}
 
-\thought[bugayenko2020blog0729]{Don't group your changes}
+\thought[bugayenko2020blog0729]{Don't group your changes.}
 
 \qte
   [\nospell{Carolyn D. Egelman}]
@@ -61,7 +67,7 @@
   {Google categorizes CRs into specific sizes, these sizes are indicated as part of the code review tool and in the notification to the reviewer of the code change... The general advice is to \ul{split} change requests for \ul{easier} and \ul{quicker} reviews when possible.}
   {egelman2020predicting}
 
-\thought{Insist on code reviews and merges... politely}
+\thought{Insist on code reviews and merges... politely.}
 
 \qte
   [\nospell{Marco Ortu}]
@@ -91,7 +97,7 @@ Valence, also known as hedonic tone, is a characteristic of emotions that determ
   GitHub is increasing size of the avatar images and emphasizing a developer's ``personal brand'' by spotlighting features such as the contribution heat map. In the future, platform designers must be more mindful in balancing the power of signals that can amplify bias or harm against users, while still providing the mechanisms for users to freely evaluate the merits of potential code contributions.
   \end{multicols}}
 
-\thought{Be a leader and a boss of a pull request --- be the one who cares}
+\thought{Be a leader and a boss of a pull request --- be the one who cares.}
 
 \qte
   [\nospell{Jason Tsay}]
@@ -112,7 +118,7 @@ Valence, also known as hedonic tone, is a characteristic of emotions that determ
   \end{multicols}
 }
 
-\thought{Be prepared for criticism about your style, not functionality}
+\thought{Be prepared for criticism about your style, not functionality.}
 
 \qte
   [\nospell{Jacek Czerwonka}]
@@ -126,7 +132,7 @@ Valence, also known as hedonic tone, is a characteristic of emotions that determ
   {Unexpectedly, quality \ul{flaws} measured by PMD turned out not to affect the acceptance of a pull request at all. As suggested by other works, other factors such as the \ul{reputation} of the maintainer and the \ul{importance} of the delivered feature might be more important than other qualities in terms of pull request acceptance.}
   {lenarduzzi2021does}
 
-\thought[bugayenko2022blog0804]{Commit the code and its tests in different pull requests}
+\thought[bugayenko2022blog0804]{Commit the code and its tests in different pull requests.}
 
 \pptBanner{Test first, fix next}
 \begin{pptWide}{2}
