--- a/07-releasing/07-releasing.tex
+++ b/07-releasing/07-releasing.tex
@@ -60,6 +60,12 @@
   \source{yamada1985cost}
   \end{multicols}}
 
+\qte
+  [\nospell{Nasif Imtiaz}]
+  {nasif-imtiaz}
+  {We find that the open source packages are typically fast in releasing security fixes, as the median release comes within 4 days of the corresponding security fix. However, 25\% of the releases still have a delay of at least 20 days.}
+  {imtiaz2022open}
+
 \thought{Fully automate the release process, avoiding any manual intervention.}
 
 \qte
