--- a/08-gaining-popularity/08-gaining-popularity.tex
+++ b/08-gaining-popularity/08-gaining-popularity.tex
@@ -32,9 +32,16 @@
 % make nice README
 %
 
-\plush{
-  \pptBanner{Read this:}\par
-  \href{https://www.yegor256.com/2019/04/23/elegant-readme.html}{Elegant READMEs} (2019)\par
-}
+\qte
+  [\nospell{Hudson Borges}]
+  {hudson-borges}
+  {We concluded that repositories have a tendency to receive more stars right after their first public release. After this period, for half of the repositories the growth rate tends to stabilize.}
+  {borges2016popularity}
+
+\qte
+  [\nospell{Fang Hongbo}]
+  {fang-hongbo.jpg}
+  {We note a sizeable group of people who follow others on GitHub and tweet about these people’s work, but do not otherwise contribute to those open-source projects.}
+  {fang2020need}
 
 \end{document}
