--- a/main.bib
+++ b/main.bib
@@ -842,3 +842,42 @@
   year={2022},
   doi={10.1145/3524610.3527919}
 }
+
+@inproceedings{borges2016popularity,
+  author={Borges, Hudson and Hora, Andre and Valente, Marco Tulio},
+  booktitle={{Proceedings of the International Conference on Software Maintenance and Evolution (ICSME)}},
+  title={{Understanding the Factors That Impact the Popularity of GitHub Repositories}},
+  year={2016},
+  pages={334-344},
+  doi={10.1109/ICSME.2016.31}
+}
+
+@inproceedings{tsay2014influence,
+  title={{Influence of Social and Technical Factors for Evaluating Contribution in GitHub}},
+  author={Tsay, Jason and Dabbish, Laura and Herbsleb, James},
+  booktitle={{Proceedings of the 36th International Conference on Software Engineering}},
+  pages={356--366},
+  year={2014},
+  doi={10.1145/2568225.2568315}
+}
+
+@inproceedings{fang2020need,
+  title={{Need for Tweet: How Open Source Developers Talk About Their GitHub Work on Twitter}},
+  author={Fang, Hongbo and Klug, Daniel and Lamba, Hemank and Herbsleb, James and Vasilescu, Bogdan},
+  booktitle={{Proceedings of the 17th International Conference on Mining Software Repositories}},
+  pages={322--326},
+  year={2020},
+  doi={10.1145/3379597.3387466}
+}
+
+@article{imtiaz2022open,
+  title={{Open or Sneaky? Fast or Slow? Light or Heavy? Investigating Security Releases of Open Source Packages}},
+  author={Imtiaz, Nasif and Khanom, Aniqa and Williams, Laurie},
+  journal={{IEEE Transactions on Software Engineering}},
+  volume={49},
+  number={4},
+  pages={1540--1560},
+  year={2022},
+  publisher={IEEE},
+  doi={10.1109/TSE.2022.3181010}
+}
