--- a/07-releasing/07-releasing.tex
+++ b/07-releasing/07-releasing.tex
@@ -63,7 +63,7 @@
 \qte
   [\nospell{Nasif Imtiaz}]
   {nasif-imtiaz}
-  {We find that the open source packages are typically fast in releasing security fixes, as the median release comes within 4 days of the corresponding security fix. However, 25\% of the releases still have a delay of at least 20 days.}
+  {We find that the open source packages are typically fast in releasing security fixes, as the median release comes within \ul{4 days} of the corresponding security fix. However, 25\% of the releases still have a delay of at least \ul{20 days}.}
   {imtiaz2022open}
 
 \thought{Fully automate the release process, avoiding any manual intervention.}
@@ -91,17 +91,22 @@
 
 \thought{Generate release notes automatically.}
 
-\thought{Publish packages}
-
-
-\thought{Be aware of malware.}
-
-\thought{Announce them.}
-
 \qte
   [\nospell{Jianyu Wu}]
   {jianyu-wu}
   {We find that: 1) RN producers are more likely to miss information than to include incorrect information, especially for breaking changes; 2) improper layout may bury important information and confuse users; 3) many users find RNs inaccessible due to link deterioration, lack of notification, and obfuscate RN locations; 4) automating and regulating RN production remains challenging despite the great needs of RN producers.}
   {wu2022demystifying}
+
+\thought{Publish packages}
+
+\thought{Be aware of malware and protestware.}
+
+\qte
+  [\nospell{Marc Cheong}]
+  {marc-cheong}
+  {By providing guidance on ethical decision making and highlighting alternative methods for expressing concerns, ethics education can play a vital role in promoting a more balanced and responsible approach to protestware within the FOSS community.}
+  {cheong2023ethical}
+
+\thought{Announce them.}
 
 \end{document}
