--- a/main.bib
+++ b/main.bib
@@ -881,3 +881,12 @@
   publisher={IEEE},
   doi={10.1109/TSE.2022.3181010}
 }
+
+@article{cheong2023ethical,
+  title={{Ethical Considerations Towards Protestware}},
+  author={Cheong, Marc and Kula, Raula Gaikovina and Treude, Christoph},
+  journal={{IEEE Software}},
+  year={2023},
+  publisher={IEEE},
+  doi={10.1109/MS.2023.3344778}
+}
