--- a/main.bib
+++ b/main.bib
@@ -890,3 +890,12 @@
   publisher={IEEE},
   doi={10.1109/MS.2023.3344778}
 }
+
+@inproceedings{lam2020putting,
+  title={{Putting the Semantics into Semantic Versioning}},
+  author={Lam, Patrick and Dietrich, Jens and Pearce, David J.},
+  booktitle={{Proceedings of the SIGPLAN International Symposium on New Ideas, New Paradigms, and Reflections on Programming and Software}},
+  pages={157--179},
+  year={2020},
+  doi={10.1145/3426428.3426922}
+}
