--- a/07-releasing/07-releasing.tex
+++ b/07-releasing/07-releasing.tex
@@ -131,14 +131,22 @@
 
 \thought{Publish binaries.}
 
-\thought{Be aware of malware and protestware.}
+\pitch{
+  \pptBanner{Some Artifact Publishing Platforms:}
+  \begin{itemize}\setlength\itemsep{0em}
+    \item \href{https://central.sonatype.com/}{Maven Central} for Java, Kotlin, Scala, Groovy, etc.
+    \item \href{https://www.npmjs.com/}{Npm} for JavaScript
+    \item \href{https://pypi.org/}{PyPi} for Python
+    \item \href{https://rubygems.org/}{RubyGems} for Ruby
+    \item \href{https://crates.io/}{Crates} for Rus
+  \end{itemize}}
 
-\qte
-  [\nospell{Marc Cheong}]
-  {marc-cheong}
-  {By providing guidance on ethical decision making and highlighting alternative methods for expressing concerns, ethics education can play a vital role in promoting a more balanced and responsible approach to protestware within the FOSS community.}
-  {cheong2023ethical}
+% \thought{Be aware of malware and protestware.}
 
-\thought{Announce them.}
+% \qte
+%   [\nospell{Marc Cheong}]
+%   {marc-cheong}
+%   {By providing \ul{guidance} on ethical decision making and highlighting alternative methods for expressing concerns, ethics education can play a vital role in promoting a more balanced and responsible approach to protestware within the FOSS community.}
+%   {cheong2023ethical}
 
 \end{document}
