--- a/08-gaining-popularity/08-gaining-popularity.tex
+++ b/08-gaining-popularity/08-gaining-popularity.tex
@@ -44,4 +44,14 @@
   {We note a sizeable group of people who follow others on GitHub and tweet about these people’s work, but do not otherwise contribute to those open-source projects.}
   {fang2020need}
 
+\thought{Announce them.}
+
+\pitch{
+  \pptBanner{Some Places to Announce:}
+  \begin{itemize}\setlength\itemsep{0em}
+    \item \href{https://www.reddit.com/r/programming/}{Reddit}
+    \item \href{https://news.ycombinator.com/}{HackerNews}
+    \item Telegram Groups
+  \end{itemize}}
+
 \end{document}
