--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -155,7 +155,7 @@ to the \href{https://www.yegor256.com/2022/08/24/research-paper-template.html}{g
 The length of the pager may not exceed four pages in
 \href{https://ctan.org/pkg/acmart}{acmart/sigplan} 10pt format
 (including references and appendices).
-The paper must be presented to the teacher incrementally, section by section:
+The paper must be presented to the teacher \angry{incrementally}, section by section:
 \begin{inparaenum}[1)]
 \item Method,
 \item Related Work,
@@ -166,7 +166,7 @@ The paper must be presented to the teacher incrementally, section by section:
 and
 \item Abstract.
 \end{inparaenum}
-Once a section is approved by the teacher, the next section may be presented for review.
+Once a section is \angry{approved} by the teacher, the next section may be presented for review.
 
 \newcommand\angry[1]{\textcolor{red}{\emph{#1}}}
 After a presentation of a section, the teacher may ask the group to \angry{stop}
