--- a/07-releasing/07-releasing.tex
+++ b/07-releasing/07-releasing.tex
@@ -61,12 +61,24 @@
   \end{multicols}}
 
 \qte
+  [\nospell{Steve McConnell}]
+  {steve-mcconnell}
+  {The question of whether to release software is a treacherous one. The answer must teeter on the line between releasing poor quality software early and releasing high quality software late. The questions of `Is the software good enough to release now?' and `When will the software be good enough to release?' can become critical to a company’s survival.}
+  {mcconnell1998}
+
+\qte
   [\nospell{Nasif Imtiaz}]
   {nasif-imtiaz}
   {We find that the open source packages are typically fast in releasing security fixes, as the median release comes within \ul{4 days} of the corresponding security fix. However, 25\% of the releases still have a delay of at least \ul{20 days}.}
   {imtiaz2022open}
 
 \thought{Fully automate the release process, avoiding any manual intervention.}
+
+\qte
+  [\nospell{Michael Nygard}]
+  {michael-nygard}
+  {Releases should about as big an event as getting a \ul{haircut}. There's an added benefit of frequent releases: it forces you to get really good at doing releases and deployments.}
+  {nygard2007release}
 
 \qte
   [\nospell{Jez Humble}]
