--- a/main.bib
+++ b/main.bib
@@ -899,3 +899,19 @@
   year={2020},
   doi={10.1145/3426428.3426922}
 }
+
+@book{nygard2007release,
+  title={{Release It!: Design and Deploy Production-Ready Software}},
+  author={Nygard, Michael},
+  year={2007},
+  publisher={The Pragmatic Bookshelf}
+}
+
+@book{mcconnell1998,
+  title={{Software Project Survival Guide}},
+  author={McConnell, Steve},
+  year={1998},
+  publisher={Microsoft Press},
+  doi={10.5555/270015}
+}
+
