--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -207,6 +207,10 @@ Reviewed a paper of another group & +3 & 9 \\
 
 Then, 55+ points mean ``A,'' 47+ mean ``B,'' and 23+ mean ``C.''
 
+An online lecture is counted as ``attended'' only if a student was personally
+presented in Zoom for more than 75\% of the lecture's time. Watching the
+lecture from the computer of a friend doesn't count.
+
 % \newpage
 % \section*{Learning Material}
 
