--- a/07-releasing/07-releasing.tex
+++ b/07-releasing/07-releasing.tex
@@ -77,7 +77,7 @@
 \qte
   [\nospell{Michael Nygard}]
   {michael-nygard}
-  {Releases should about as big an event as getting a \ul{haircut}. There's an added benefit of frequent releases: it forces you to get really good at doing releases and deployments.}
+  {Releases should be about as big an event as getting a \ul{haircut}. There's an added benefit of frequent releases: it forces you to get really good at doing releases and deployments.}
   {nygard2007release}
 
 \qte
