--- a/08-gaining-popularity/08-gaining-popularity.tex
+++ b/08-gaining-popularity/08-gaining-popularity.tex
@@ -33,15 +33,21 @@
 %
 
 \qte
+  [\nospell{Tony Ammeter}]
+  {tony-ammeter}
+  {It appears that \ul{vitality} has a significant effect on popularity over time, indicating that the more active a project is in terms of posting new \ul{releases} and making \ul{announcements}, the more attention it receives from the community.}
+  {stewart2002exploratory}
+
+\qte
   [\nospell{Hudson Borges}]
   {hudson-borges}
-  {We concluded that repositories have a tendency to receive more stars right after their first public release. After this period, for half of the repositories the growth rate tends to stabilize.}
+  {We concluded that repositories have a tendency to receive more stars right after their \ul{first public release}. After this period, for half of the repositories the growth rate tends to stabilize.}
   {borges2016popularity}
 
 \qte
   [\nospell{Fang Hongbo}]
-  {fang-hongbo.jpg}
-  {We note a sizeable group of people who follow others on GitHub and tweet about these people’s work, but do not otherwise contribute to those open-source projects.}
+  {fang-hongbo}
+  {We note a sizeable group of people who \ul{follow} others on GitHub and \ul{tweet} about these people’s work, but do not otherwise contribute to those open-source projects.}
   {fang2020need}
 
 \thought{Announce them.}
@@ -51,7 +57,11 @@
   \begin{itemize}\setlength\itemsep{0em}
     \item \href{https://www.reddit.com/r/programming/}{Reddit}
     \item \href{https://news.ycombinator.com/}{HackerNews}
+    \item \href{https://dzone.com/}{DZone}
+    \item \href{https://stackoverflow.com}{StackOverflow}
     \item Telegram Groups
+    \item Twitter
+    \item Your blog
   \end{itemize}}
 
 \end{document}
