--- a/main.bib
+++ b/main.bib
@@ -915,3 +915,10 @@
   doi={10.5555/270015}
 }
 
+@misc{stewart2002exploratory,
+  title={{An Exploratory Study of Factors Influencing the Level of Vitality and Popularity of Open Source Projects}},
+  author={Stewart, Katherine and Ammeter, Tony},
+  journal={Proceedings of the International Conference on Information Systems},
+  year={2002}
+}
+
