--- a/05-setting-guidelines/05-setting-guidelines.tex
+++ b/05-setting-guidelines/05-setting-guidelines.tex
@@ -99,6 +99,12 @@
 \pitch{\includegraphics[width=.75\linewidth]{readme-size.png}
   \source{weber2014makes}}
 
+\qte
+  [\nospell{Asher Trockman}]
+  {asher-trockman}
+  {We find that non-trivial \ul{badges}, which display the build status, test coverage, and up-to-dateness of dependencies, are mostly reliable signals, correlating with more tests, better pull requests, and fresher dependencies.}
+  {trockman2018adding}
+
 \thought[bugayenko2014blog0721]{Make the \ff{master} branch read-only}
 
 \thought{Put \ff{CODE\_OF\_CONDUCT.md} file to your repository... not}
