--- a/main.bib
+++ b/main.bib
@@ -922,3 +922,32 @@
   year={2002}
 }
 
+@inproceedings{fang2022damn,
+  title={{``This Is Damn Slick!'' Estimating the Impact of Tweets on Open Source Project Popularity and New Contributors}},
+  author={Fang, Hongbo and Lamba, Hemank and Herbsleb, James and Vasilescu, Bogdan},
+  booktitle={{Proceedings of the 44th International Conference on Software Engineering}},
+  pages={2116--2129},
+  year={2022},
+  doi={10.1145/3510003.3510121}
+}
+
+@article{borges2019developers,
+  title={{How Do Developers Promote Open Source Projects?}},
+  author={Borges, Hudson Silva and Valente, Marco Tulio},
+  journal={{Computer}},
+  volume={52},
+  number={8},
+  pages={27--33},
+  year={2019},
+  publisher={IEEE},
+  doi={0.1109/MC.2018.2888770}
+}
+
+@inproceedings{trockman2018adding,
+  title={{Adding Sparkle to Social Coding: An Empirical Study of Repository Badges in the \textit{npm} Ecosystem}},
+  author={Trockman, Asher and Zhou, Shurui and K{\"a}stner, Christian and Vasilescu, Bogdan},
+  booktitle={{Proceedings of the 40th International Conference on Software Engineering}},
+  pages={511--522},
+  year={2018},
+  doi={10.1145/3180155.3180209}
+}
