--- a/osbp.sty
+++ b/osbp.sty
@@ -32,7 +32,7 @@
 \RequirePackage[dry,increment]{crumbs}
 \RequirePackage[static]{clicks}
 \RequirePackage[template,scheme=light]{ppt-slides}
-\RequirePackage[nocn]{ffcode}
+\RequirePackage[nocn,noframes]{ffcode}
 \RequirePackage{calc}
 \RequirePackage{soul}
 \RequirePackage{doi}
@@ -68,7 +68,7 @@
       {\color{gray}\rmfamily\scriptsize\bibentry{#4}}
   }
 }
-\newcommand\source[1]{\par{\scriptsize Source: \bibentry{#1}\par}}
+\newcommand\source[1]{\par{\scriptsize\color{gray} Source: \bibentry{#1}\par}}
 
 \newcommand\nospell[1]{#1}
 
