--- a/07-releasing/07-releasing.tex
+++ b/07-releasing/07-releasing.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Releasing}
 \begin{document}
 
-\plush{\osbpTitlePage{7}{}}
+\plush{\osbpTitlePage{7}{VTsbvZSMwYE}}
 
 \qte
   [\nospell{Andre Van Der Hoek}]
