--- a/08-gaining-popularity/08-gaining-popularity.tex
+++ b/08-gaining-popularity/08-gaining-popularity.tex
@@ -27,8 +27,6 @@
 
 \plush{\osbpTitlePage{8}{}}
 
-\thought{Make them attractive for programmers.}
-
 \pitch{
   \pptBanner{Quick recap of previous lectures:}
   \begin{enumerate}[label=L\arabic*:]
@@ -42,14 +40,17 @@
     \item Make frequent SemVer \ul{releases}
   \end{enumerate}}
 
+\thought{Put some badges.}
 
-\thought{Keep the momentum.}
+\pitch{
+  \includegraphics[width=.6\linewidth]{eo-badges.png}
+  \par\url{https://github.com/objectionary/eo}}
 
 \qte
-  [\nospell{Tony Ammeter}]
-  {tony-ammeter}
-  {It appears that \ul{vitality} has a significant effect on popularity over time, indicating that the more active a project is in terms of posting new \ul{releases} and making \ul{announcements}, the more attention it receives from the community.}
-  {stewart2002exploratory}
+  [\nospell{Asher Trockman}]
+  {asher-trockman}
+  {A vast majority (88\%) agree with the statement `I consider the presence of badges in general to be an indicator of project \ul{quality}.'}
+  {trockman2018adding}
 
 \thought{Keep the momentum.}
 
@@ -64,6 +65,14 @@
   {fang-hongbo}
   {We note a sizeable group of people who \ul{follow} others on GitHub and \ul{tweet} about these people’s work, but do not otherwise contribute to those open-source projects.}
   {fang2020need}
+
+\thought{Keep it up.}
+
+\qte
+  [\nospell{Tony Ammeter}]
+  {tony-ammeter}
+  {It appears that \ul{vitality} has a significant effect on popularity over time, indicating that the more active a project is in terms of posting new \ul{releases} and making \ul{announcements}, the more attention it receives from the community.}
+  {stewart2002exploratory}
 
 \thought{Make some noise.}
 
