--- a/08-gaining-popularity/08-gaining-popularity.tex
+++ b/08-gaining-popularity/08-gaining-popularity.tex
@@ -40,6 +40,33 @@
     \item Make frequent SemVer \ul{releases}
   \end{enumerate}}
 
+\qte
+  [\nospell{Andre Hora}]
+  {andre-hora}
+  {We found that general models, i.e., models produced using the top GitHub repositories, start to provide \ul{accurate predictions} when they are trained with data from six months and used to predict the number of stars six months ahead.}
+  {borges2016predicting}
+\pitch{
+  \begin{multicols}{2}
+  \includegraphics[width=\linewidth]{diff.png}
+  \source{borges2016predicting}
+  \par\columnbreak\par
+  \includegraphics[width=\linewidth]{trends.png}
+  \includegraphics[width=\linewidth]{clusters.png}
+  \end{multicols}}
+
+\qte
+  [\nospell{Felipe Fronchetti}]
+  {felipe-fronchetti}
+  {We found that \ul{popularity} of the project (in terms of stars), time to review pull requests, project age, and programming languages are the factors that best explain the newcomers' growth patterns.}
+  {fronchetti2019attracts}
+\pitch{
+  \begin{multicols}{2}
+  \includegraphics[width=.8\linewidth]{ranking.png}
+  \par\columnbreak\par
+  ``Popularity of the project (in terms of stars), time to review pull requests, and project characteristics like age and programming languages are the factors that best explain the newcomers' growth patterns. In addition, GitHub recommended community standards have a lower influence on the observed growth patterns.''
+  \source{fronchetti2019attracts}
+  \end{multicols}}
+
 \thought{Put some badges.}
 
 \pitch{
