--- a/main.bib
+++ b/main.bib
@@ -951,3 +951,22 @@
   year={2018},
   doi={10.1145/3180155.3180209}
 }
+
+@inproceedings{borges2016predicting,
+  title={{Predicting the Popularity of GitHub Repositories}},
+  author={Borges, Hudson and Hora, Andre and Valente, Marco Tulio},
+  booktitle={{Proceedings of the 12th International Conference on Predictive Models and Data Analytics in Software Engineering}},
+  pages={1--10},
+  year={2016},
+  doi={10.1145/2972958.2972966}
+}
+
+@inproceedings{fronchetti2019attracts,
+  title={{What Attracts Newcomers to Onboard on OSS Projects? TL;DR: Popularity}},
+  author={Fronchetti, Felipe and Wiese, Igor and Pinto, Gustavo and Steinmacher, Igor},
+  booktitle={{Proceedings of the 15th IFIP WG of the International Conference on Open Source Software}},
+  pages={91--103},
+  year={2019},
+  organization={Springer},
+  doi={10.1007/978-3-030-20883-7_9}
+}
